Fix margins on mobile

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html {
 }
 
 body {
-	max-width: 768px;
+	min-width: 768px;
 	width: 50%;
 	margin: 0 auto;
 }
